--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,16 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
+                        <img src="./../static/sofa.png" alt="" width="500" height="500">
+                    </li>
+                    <li class="splide__slide">
                         <img src="./../static/bed.png" alt="" width="500" height="500">
                     </li>
                     <li class="splide__slide">
-                        <img src="./../static/sofa.png" alt="" width="500" height="500">
+                        <img src="./../static/Table.png" alt="" width="500" height="500">
+                    </li>
+                    <li class="splide__slide">
+                        <img src="./../static/Light.png" alt="" width="500" height="500">
                     </li>
                 </ul>
             </div>
