ammo js intialisation

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <canvas class="webgl"></canvas>
-    <div class="caraousel">
+    <!-- <div class="caraousel">
         <section class="splide" aria-label="Splide Basic HTML Example">
             <div class="splide__track">
                 <ul class="splide__list">
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </section>
-    </div>
+    </div> -->
 
 </body>
 
